--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <!-- <app-home></app-home> -->
+  <!-- <app-tab1home></app-tab1home> -->
 </body>
 </html>
